k8s/deployment.yaml
# Point to docker image and run applications
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kucli-nest
  labels:
    app: kucli-nest
spec:
  replicas: 6
  selector:
    matchLabels:
      app: kucli-nest
  template:
    metadata:
      labels:
        app: kucli-nest
    spec:
      containers:
        - name: kucli-nest
          image: local/kucli-nest:latest
          imagePullPolicy: Never
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
